# actionlint-py

./: .pre-commit-hooks.yaml  README.md  setup.cfg  setup.py
